gcc/testsuite/rust/rustc/ui/consts/nested_erroneous_ctfe.rs
fn main() {
    [9; || [9; []]];
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

